2014-09-13  Frank Warmerdam  <warmerdam@pobox.com>

	* Generate 4.9.0 release.

2014-19-13 Howard Butler <hobu.inc@gmail.com>
	* CMake: Implement CMake build system for proj.4 #243

2014-09-13  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_datums.c: fix spelling of clrk80 in carthage datum def (#245)

2014-19-13 Howard Butler <hobu.inc@gmail.com>
	* pj_gridinfo.c: Don't crash when nad_ctable_init doesn't return
	a ctx. #231

2014-09-13  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: Updated to EPSG 8.5

2014-19-08 Even Rouault <even.rouault@mines-paris.org>

	* src/pj_gridinfo.c: Make pj_gridinfo_load() thread-safe (#228)

2014-19-08 Howard Butler <hobu.inc@gmail.com>

	* src/pj_init.c: apply fix specified in #229  -- pj_init_plus() with init
	and other parms fails in 4.9.0beta

2014-06-06 Even Rouault <even.rouault@mines-paris.org>

	* src/PJ_omerc.c: mark no_off/no_uoff as used for round-tripping
	pj_init_ctxt()/pj_get_def() (#239)

2014-05-14 Even Rouault <even.rouault@mines-paris.org>

	* nad/epsg: Upgraded to EPSG 8.4

2013-12-09  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_geos.c, testvarious: reverse sense of sweep flag. (#146)

2013-12-05  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_qsc.c: Add QSC projection (#179)

2013-10-27  Frank Warmerdam  <warmerdam@gdal-c>

	* Prepare 4.9.0beta2 release.

2013-10-21  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_omerc.c: Change handling of values nearly 90degrees away from
	the origin (#114).

	* src/pj_datums.c: Switch to using EPSG:1618 COORD_OP_CODE to transform
	hermannskogel to WGS84 (same as used to ETRS89) (#207).

2013-10-20  Frank Warmerdam  <warmerdam@pobox.com>

	* src/Makefile.am: Given up on restricting access to projects.h, and
	move it back into the list of files installed normally.

	* configure.in: Add C_WFLAGS support, in particular use
	-Wdeclaration-after-statement to warn about code that won't work
	with MSVC (#224).
